--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -6,7 +6,7 @@
   --color-cursor: 220, 90, 90;
   --cursor-outline-shade: 0.3;
   --cursor-size: 10px;
-  --cursor-outline-size: 30px;
+  --cursor-outline-size: 10px;
 }
 
 @layer base {
@@ -77,7 +77,7 @@
   * {
     @apply border-border;
   }
-  html {
+  /* html {
     overflow: hidden;
   }
   html,
@@ -85,10 +85,25 @@
   button,
   a {
     cursor: none !important;
-  }
+  } */
   body {
     @apply bg-background text-foreground;
   }
+}
+
+body::-webkit-scrollbar {
+  width: 8px;
+  border-radius: 9999px;
+}
+
+body::-webkit-scrollbar-track {
+  display: none;
+}
+
+body::-webkit-scrollbar-thumb {
+  background-color: darkgrey;
+  border-radius: 9999px;
+  height: 20px !important;
 }
 
 #cursor-dot,
